--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "vitest run",
     "test:dev": "vitest watch --coverage.enabled=false --reporter verbose",
     "lint": "yarn eslint --ext ts,tsx --max-warnings 0",
-    "clean": "yarn rimraf dist",
+    "clean": "yarn rimraf dist .seraphim",
     "preflight": "bash ./.githooks/pre-commit"
   },
   "dependencies": {
