--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ node_modules/
 dist/
 $null
 .seraphim/
+.vscode/
+!.vscode/*.code-snippets
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/keybindings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+*.vsix
