Fixes and things

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "strict": false, // Enable all strict type checking options
     "removeComments": true,
     "useUnknownInCatchVariables": false,
+    "esModuleInterop": true,
     // Resolving
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -30,9 +31,6 @@
     // Absolute import paths
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
       "@electron/*": [
         "electron/src/*"
       ],
