--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vscode/"
   ],
   "scripts": {
-    "dev": "concurrently --kill-others 'cd frontend && yarn dev' 'cd electron && yarn dev'",
+    "dev": "concurrently --kill-others \"yarn --cwd frontend dev\" \"yarn --cwd electron dev\"",
     "build": "bash ./scripts/build.sh",
     "compile:deb": "yarn cross-env TARGET_MAKER=deb bash ./scripts/compile.sh",
     "compile:rpm": "yarn cross-env TARGET_MAKER=rpm bash ./scripts/compile.sh",
@@ -62,6 +62,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "chalk": "^5.4.1",
+    "concurrently": "^9.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "eslint": "^8.57.0",
