--- a/electron/package.json
+++ b/electron/package.json
@@ -26,6 +26,8 @@
     "electron-serve": "^2.1.1",
     "electron-squirrel-startup": "^1.0.1",
     "electron-window-state": "^5.0.3",
+    "express": "^5.1.0",
+    "express-ws": "^5.0.2",
     "playwright": "^1.53.1",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
@@ -41,6 +43,7 @@
     "@electron-forge/plugin-vite": "^7.8.0",
     "@electron/fuses": "^1.8.0",
     "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/express-ws": "^3.0.5",
     "cross-env": "^7.0.3",
     "electron": "37",
     "ts-node": "^10.9.2"
