--- a/electron/package.json
+++ b/electron/package.json
@@ -13,7 +13,7 @@
     "public"
   ],
   "scripts": {
-    "dev": "electron-forge start",
+    "dev": "cross-env FORCE_COLOR=1 electron-forge start",
     "build": "tsc -b",
     "package": "electron-forge package",
     "make": "electron-forge make",
