--- a/electron/package.json
+++ b/electron/package.json
@@ -21,6 +21,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.61",
+    "@langchain/langgraph": "^0.3.5",
+    "@langchain/openai": "^0.5.16",
     "@reduxjs/toolkit": "^2.8.2",
     "chalk": "^5.4.1",
     "electron-log": "^5.3.4",
