--- a/electron/package.json
+++ b/electron/package.json
@@ -34,7 +34,8 @@
     "express-ws": "^5.0.2",
     "playwright": "^1.53.1",
     "typescript": "^5.8.3",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.0",
