--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,32 @@
 {
   "compilerOptions": {
-    // Cache
+    "ignoreDeprecations": "5.0",
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    // Target
-    "target": "ESNext",
-    "module": "ESNext",
-    "useDefineForClassFields": true,
+    "target": "esnext",
+    "module": "esnext",
     "lib": [
       "ESNext"
     ],
-    // Type handling
-    "skipLibCheck": true, // Skip type checking of declaration files
-    "strictNullChecks": false, // Allow null & undefined to be interchangable
-    "strict": false, // Enable all strict type checking options
-    "removeComments": true,
-    "useUnknownInCatchVariables": false,
-    "esModuleInterop": true,
-    // Resolving
+    /* Bundler mode */
     "moduleResolution": "bundler",
+    "skipLibCheck": true,
+    "composite": true,
     "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
+    "useUnknownInCatchVariables": false,
     "isolatedModules": true,
-    "jsx": "react-jsx",
-    // Output
+    "moduleDetection": "force",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "sourceMap": false,
     "noEmit": true,
-    // Linting
-    "noUnusedLocals": true,
+    /* Base options */
+    "strictNullChecks": false,
+    "noImplicitAny": true,
+    /* Linting
+     * We let eslint handle most of this
+     */
+    "strict": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
