--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,10 @@
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
   },
-  "i18next.i18nPaths": "e:/Projects/Seraphim/frontend/public/locales",
+  "i18next.i18nPaths": "frontend/public/locales",
+  "files.exclude": {
+    ".yarn": true,
+    // ".yarnrc": true,
+    "yarn.config.cjs": true
+  }
 }
