--- a/package.json
+++ b/package.json
@@ -52,38 +52,25 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin-js": "^3.1.0",
+    "@jalapenolabs/cli": "https://github.com/jalapenolabs/cli.git#7372df994ace977ca9130160b47d1fb032f6f1a4",
     "@types/argparse": "^2.0.17",
     "@types/express": "^5.0.3",
     "@types/hjson": "^2.4.6",
     "@types/humanize-duration": "^3.27.4",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^24.0.6",
+    "@types/node": "^25.0.3",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "chalk": "^5.4.1",
     "concurrently": "^9.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-google": "^0.14.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-i18next": "^6.1.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint": "^9.39.2",
     "happy-dom": "^18.0.1",
     "rimraf": "^6.0.1",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.15.0",
     "vite-bundle-visualizer": "^1.2.1",
     "vitest": "^3.2.4"
   }
