--- a/electron/package.json
+++ b/electron/package.json
@@ -13,7 +13,7 @@
     "public"
   ],
   "scripts": {
-    "dev": "cross-env FORCE_COLOR=1 electron-forge start",
+    "dev": "cross-env FORCE_COLOR=1 NODE_OPTIONS=--no-warnings electron-forge start",
     "build": "tsc -b",
     "package": "electron-forge package",
     "make": "electron-forge make",
@@ -27,16 +27,12 @@
     "@langchain/openai": "^0.5.16",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
-    "chalk": "^5.4.1",
     "cheerio": "^1.1.0",
     "electron-log": "^5.3.4",
     "electron-serve": "^2.1.1",
     "electron-squirrel-startup": "^1.0.1",
     "electron-window-state": "^5.0.3",
-    "express": "^5.1.0",
     "express-ws": "^5.0.2",
-    "playwright": "^1.53.1",
-    "typescript": "^5.8.3",
     "vite": "^7.0.0",
     "zod": "^3.25.67"
   },
@@ -49,11 +45,10 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.8.0",
     "@electron-forge/plugin-fuses": "^7.8.0",
     "@electron-forge/plugin-vite": "^7.8.0",
-    "@electron/fuses": "^1.8.0",
+    "@electron/fuses": "^2.0.0",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/express-ws": "^3.0.5",
-    "cross-env": "^7.0.3",
-    "electron": "37",
+    "electron": "^39.2.7",
     "ts-node": "^10.9.2"
   }
 }
