--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroui/react": "^2.7.11",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/postcss": "^4.1.18",
     "events": "^3.3.0",
     "framer-motion": "^12.19.1",
     "lodash-es": "^4.17.21",
@@ -22,17 +23,17 @@
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "sass": "^1.89.2",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.10",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "autoprefixer": "^10.4.20",
     "globals": "^16.0.0",
     "typescript": "^5.8.3",
     "vite": "^7.0.0",
