--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "@heroui/react": "^2.7.11",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/query-core": "^5.90.16",
     "events": "^3.3.0",
     "framer-motion": "^12.19.1",
     "lodash-es": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
