--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -17,8 +17,6 @@
     "composite": false
   },
   "include": [
-    "src",
-    "../common/src/redux/stores/context.ts",
-    "../common/src/redux/stores/jobs.ts"
+    "src"
   ]
 }
