--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seraphim",
+  "name": "seraphim-app",
   "version": "0.0.2",
   "description": "A tool to orchestrate hotkeys to automated chatgpt analysis",
   "author": {
@@ -22,9 +22,6 @@
   ],
   "scripts": {
     "dev": "concurrently --kill-others \"yarn --cwd frontend dev\" \"yarn --cwd electron dev\"",
-    "build": "bash ./scripts/build.sh",
-    "compile:deb": "yarn cross-env TARGET_MAKER=deb bash ./scripts/compile.sh",
-    "compile:rpm": "yarn cross-env TARGET_MAKER=rpm bash ./scripts/compile.sh",
     "typecheck": "yarn workspaces run typecheck",
     "smoketest": "cross-env SMOKETEST=true vitest run",
     "test": "vitest run",
