--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "ignoreDeprecations": "6.0",
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "esnext",
     "module": "esnext",
@@ -28,7 +27,7 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": false,
     "noUncheckedSideEffectImports": true,
     // Absolute import paths
     "baseUrl": ".",
@@ -39,7 +38,8 @@
     }
   },
   "include": [
-    "vitest.config.ts"
+    "vitest.config.ts",
+    "eslint.config.ts"
   ],
   "exclude": [
     "node_modules",
