--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -2,13 +2,17 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "target": "esnext",
+    "jsx": "react-jsx",
     "lib": [
       "ESNext",
       "DOM",
       "DOM.Iterable"
-    ]
+    ],
+    "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src",
+    "../frontend/src/**/*.ts",
+    "../frontend/src/**/*.tsx"
   ]
 }
