--- a/electron/package.json
+++ b/electron/package.json
@@ -26,13 +26,19 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^7.3.0",
     "@reduxjs/toolkit": "^2.8.2",
     "chalk": "^5.4.1",
+    "cors": "^2.8.6",
     "electron-localshortcut": "^3.2.1",
     "electron-log": "^5.3.4",
     "electron-serve": "^2.1.1",
     "electron-squirrel-startup": "^1.0.1",
-    "electron-window-state": "^5.0.3"
+    "electron-window-state": "^5.0.3",
+    "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.0",
@@ -44,12 +50,16 @@
     "@electron-forge/plugin-fuses": "^7.8.0",
     "@electron-forge/plugin-vite": "^7.8.0",
     "@electron/fuses": "^2.0.0",
+    "@types/cors": "^2",
     "@types/electron-localshortcut": "^3.1.3",
     "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/express": "^5",
+    "@types/hpp": "^0",
     "@types/js-yaml": "^4.0.9",
     "cross-env": "^10.0.0",
     "electron": "^38.2.0",
     "playwright": "^1.53.1",
+    "prisma": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
