--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash-es": "^4.17.21",
     "node-global-key-listener": "^0.3.0",
     "openai": "^5.7.0",
+    "prisma": "7",
     "ts-morph": "^26.0.0",
     "uuid": "^11.1.0",
     "yup": "^1.6.1"
