--- a/electron/package.json
+++ b/electron/package.json
@@ -11,8 +11,8 @@
     "url": "https://jalapenolabs.io"
   },
   "engines": {
-    "node": ">=22.11.0",
-    "yarn": ">=4.9.2"
+    "node": ">=24.13.0",
+    "yarn": ">=4.12.0"
   },
   "files": [
     "public"
@@ -26,6 +26,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@reduxjs/toolkit": "^2.8.2",
     "chalk": "^5.4.1",
