--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "rootDir": "..",
+    "rootDirs": [
+      "src",
+      "../common/src"
+    ],
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "lib": [
@@ -17,6 +22,7 @@
     "composite": false
   },
   "include": [
-    "src"
+    "src",
+    "../common/src"
   ]
 }
