--- a/electron/package.json
+++ b/electron/package.json
@@ -31,6 +31,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "chalk": "^5.4.1",
     "cors": "^2.8.6",
+    "dockerode": "^4.0.9",
     "electron-localshortcut": "^3.2.1",
     "electron-log": "^5.3.4",
     "electron-serve": "^2.1.1",
@@ -53,6 +54,7 @@
     "@electron-forge/plugin-vite": "^7.8.0",
     "@electron/fuses": "^2.0.0",
     "@types/cors": "^2",
+    "@types/dockerode": "^4.0.1",
     "@types/electron-localshortcut": "^3.1.3",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/express": "^5",
