--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,13 @@
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=SeraphimIsCool99!
 POSTGRES_DB=seraphim
-DATABASE_URL=postgresql://admin:SeraphimIsCool99!@localhost:992/seraphim
+DATABASE_URL=postgresql://admin:SeraphimIsCool99!@localhost:9902/seraphim
 
 # Optional
 
 # Point it to a different socket path if desired
 # DOCKER_SOCK_PATH=/var/run/docker.sock
+
+# API_PORT=9900
+# TRANSCRIBER_PORT=9901
+# POSTGRES_PORT=9902
