--- a/electron/package.json
+++ b/electron/package.json
@@ -41,7 +41,8 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
-    "ky": "^1.14.2"
+    "ky": "^1.14.2",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.0",
