--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "sass": "^1.89.2",
+    "swr": "^2.3.5",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
     "yup": "^1.6.1"
