--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,15 @@
     "paths": {
       "@common/*": [
         "common/src/*"
+      ],
+      "@frontend/*": [
+        "frontend/src/*"
+      ],
+      "@electron/*": [
+        "electron/src/*"
+      ],
+      "@api/*": [
+        "electron/src/api/*"
       ]
     }
   },
