--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.11",
+    "@hookform/resolvers": "^3.10.0",
+    "@monaco-editor/react": "^4.7.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/query-core": "^5.90.16",
@@ -19,8 +21,10 @@
     "framer-motion": "^12.19.1",
     "ky": "^1.14.2",
     "lodash-es": "^4.17.21",
+    "monaco-editor": "^0.55.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
@@ -28,8 +32,10 @@
     "sass": "^1.89.2",
     "swr": "^2.3.5",
     "tailwindcss": "^3.4.17",
+    "use-local-storage-state": "^19.5.0",
     "uuid": "^11.1.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^3.25.49"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
