--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
           cache: yarn
 
       - name: Setup yarn
-        run: npm run get-yarn
+        run: corepack enable
 
       - name: Yarn constraints
         run: yarn constraints
