--- a/common/package.json
+++ b/common/package.json
@@ -2,6 +2,10 @@
   "name": "common",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=24.13.0",
+    "yarn": ">=4.12.0"
+  },
   "main": "index.js",
   "license": "UNLICENSED",
   "scripts": {
