--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=24.13.0",
+    "yarn": ">=4.12.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -36,7 +40,7 @@
     "use-local-storage-state": "^19.5.0",
     "uuid": "^11.1.0",
     "yup": "^1.6.1",
-    "zod": "^3.25.49"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
