--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ DATABASE_URL=postgresql://admin:SeraphimIsCool99!@localhost:9902/seraphim
 # API_PORT=9900
 # TRANSCRIBER_PORT=9901
 # POSTGRES_PORT=9902
+
+# Github OAuth (required to enable Github auth)
+# GITHUB_OAUTH_CLIENT_ID=your_github_oauth_client_id
+# GITHUB_OAUTH_CLIENT_SECRET=your_github_oauth_client_secret
