--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "rimraf": "^6.0.1",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
+    "vite": "^7.3.1",
     "vite-bundle-visualizer": "^1.2.1",
     "vitest": "^3.2.4"
   }
