--- a/electron/package.json
+++ b/electron/package.json
@@ -55,7 +55,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.8.0",
     "@electron-forge/plugin-fuses": "^7.8.0",
     "@electron-forge/plugin-vite": "^7.8.0",
-    "@electron/fuses": "^2.0.0",
+    "@electron/fuses": "^1.0.0",
     "@types/cors": "^2",
     "@types/dockerode": "^4.0.1",
     "@types/electron-localshortcut": "^3.1.3",
@@ -63,6 +63,7 @@
     "@types/express": "^5.0.3",
     "@types/hpp": "^0",
     "@types/js-yaml": "^4.0.9",
+    "@types/node": "^25.1.0",
     "cross-env": "^10.1.0",
     "electron": "^38.2.0",
     "playwright": "^1.53.1",
