--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "@vitejs/plugin-react-swc": "^3.8.0",
     "autoprefixer": "^10.4.20",
     "globals": "^16.0.0",
+    "postcss": "^8.5.6",
     "typescript": "^5.8.3",
     "vite": "^7.3.1",
     "vite-bundle-visualizer": "^1.2.1",
