Sanitize token account responses and refresh env example

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,4 @@ DATABASE_URL=postgresql://admin:SeraphimIsCool99!@localhost:9902/seraphim
 # TRANSCRIBER_PORT=9901
 # POSTGRES_PORT=9902
 
-# Github OAuth (required to enable Github auth)
-# GITHUB_OAUTH_CLIENT_ID=your_github_oauth_client_id
-# GITHUB_OAUTH_CLIENT_SECRET=your_github_oauth_client_secret
+# GitHub token accounts are configured per-user in the app UI (no OAuth env vars required)
