--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -6,8 +6,8 @@
       "src",
       "../common/src"
     ],
-    "module": "NodeNext",
-    "moduleResolution": "nodenext",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "lib": [
       "ESNext",
       "DOM"
