--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   ],
   "scripts": {
     "dev": "concurrently --kill-others \"yarn --cwd frontend dev\" \"yarn --cwd electron dev\"",
-    "setup": "yarn prisma generate && yarn prisma db push",
+    "generate": "yarn prisma generate && yarn codex app-server generate-ts --out ./electron/src/vendor/codex-protocol",
+    "setup": "yarn generate && yarn prisma db push",
     "build": "yarn workspaces foreach -Apt run build",
     "typecheck": "yarn workspaces foreach -Apt run typecheck",
     "smoketest": "cross-env SMOKETEST=true vitest run",
