--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "scripts": {
     "dev": "concurrently --kill-others \"yarn --cwd frontend dev\" \"yarn --cwd electron dev\"",
-    "generate": "yarn prisma generate && yarn codex app-server generate-ts --out ./electron/src/vendor/codex-protocol",
+    "generate": "yarn prisma generate && yarn codex app-server generate-ts --out ./electron/src/vendor/codex-protocol && tsx ./scripts/buildkit-proto.ts",
     "setup": "yarn generate && yarn prisma db push",
     "build": "yarn workspaces foreach -Apt run build",
     "typecheck": "yarn workspaces foreach -Apt run typecheck",
@@ -69,9 +69,13 @@
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
+    "google-proto-files": "^5.0.1",
     "happy-dom": "^18.0.1",
+    "protobufjs": "^8.0.0",
     "rimraf": "^6.0.1",
-    "tsx": "^4.19.4",
+    "tar": "^7.5.9",
+    "ts-proto": "^2.11.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.8.3",
     "vite": "^7.3.1",
     "vite-bundle-visualizer": "^1.2.1",
