--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "google-proto-files": "^5.0.1",
     "happy-dom": "^18.0.1",
     "protobufjs": "^8.0.0",
+    "protoc": "^33.5.0",
     "rimraf": "^6.0.1",
     "tar": "^7.5.9",
     "ts-proto": "^2.11.2",
