Overhauling and cleaning up

--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -23,6 +23,8 @@
   },
   "include": [
     "src",
-    "../common/src"
+    "../common/src",
+    "../frontend/src/http",
+    "../frontend/src/routes"
   ]
 }
