--- a/common/package.json
+++ b/common/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@openai/codex-sdk": "^0.98.0",
     "glob": "^13.0.0",
+    "jira.js": "^5.3.0",
     "jsonc-parser": "^3.3.1",
     "openai": "^6.21.0",
     "typescript": "^5.8.3"
