More unit test stuff

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,14 @@ POSTGRES_PASSWORD=SeraphimIsCool99!
 POSTGRES_DB=seraphim
 DATABASE_URL=postgresql://admin:SeraphimIsCool99!@localhost:9902/seraphim
 
+# ####################
 # Optional
 
 # Point it to a different socket path if desired
 # DOCKER_SOCK_PATH=/var/run/docker.sock
 
-# POSTGRES_PORT=9902
-
-# GitHub token accounts are configured per-user in the app UI (no OAuth env vars required)
+# Optional testing
+VITEST_JIRA_ACCESS_TOKEN=
+VITEST_JIRA_EMAIL=
+VITEST_JIRA_TARGET_BOARD=
+VITEST_JIRA_BASE_URL=
