--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "build": "tsc -b && vite build",
     "analyze": "vite-bundle-visualizer",
     "preview": "vite preview",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "storybook": "storybook dev -p 6006 -c .storybook",
+    "storybook:build": "storybook build -c .storybook"
   },
   "dependencies": {
     "@heroui/react": "^2.7.11",
@@ -42,6 +44,9 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -50,6 +55,7 @@
     "autoprefixer": "^10.4.20",
     "globals": "^16.0.0",
     "postcss": "^8.5.6",
+    "storybook": "^8.6.14",
     "typescript": "^5.8.3",
     "vite": "^7.3.1",
     "vite-bundle-visualizer": "^1.2.1",
